--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <header>
+        <h1 id="title">The form of Forms</h1>
+    </header>
+    <main>
+        <p id="description">This is my form project for FreeCodeCamp. This from asks about your feelings towards Covid-19</p>
+        <form id="survey-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name">
+        </form>
+    </main>
     
 </body>
 </html>
