--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
     <main>
         <p id="description">This is my form project for FreeCodeCamp. This from asks about your feelings towards Covid-19</p>
         <form id="survey-form">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name">
+            <label for="name-label">Name:
+                <input type="text" id="name" name="name" required placeholder="Enter Name">
+            </label>
+            <label for="email">Email:
+                <input type="email" id="email" name="email" required placeholder="Enter Email">
+            </label>   
+            <label for="number-label">Number of weeks working from home:
+                <input type="number" id="" name="number_of_weeks_at_home" placeholder="Enter number of days at home" min='5' max="60">
+            </label>
+            <button type="submit">Submit</button>
         </form>
     </main>
     
