--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
             <label for="number-label">Number of weeks working from home:
                 <input type="number" id="" name="number_of_weeks_at_home" placeholder="Enter number of days at home" min='5' max="60">
             </label>
+            <label for="dropdown">Select Country of Residence
+                <select id="dropdown" name="residence" >
+                    <option value="" disabled selected>Select Option</option>
+                    <option value="Canada">Canada</option>
+                    <option value="usa">USA</option>
+                    <option value="mexico">Mexico</option>
+                </select>
+            </label>
+            
             <button type="submit">Submit</button>
         </form>
     </main>
