completed requirements for project

--- a/index.html
+++ b/index.html
@@ -31,6 +31,25 @@
                     <option value="mexico">Mexico</option>
                 </select>
             </label>
+            <fieldset id="group1">
+                <p>Want to return to work?</p>
+                <label for="yes">Yes</label>
+                <input id="yes" type="radio" value="Yes" name="group1">
+                <label for="no">No</label>
+                <input id="no" type="radio" value="No" name="group1">
+                <label for="maybe">Undecided</label>
+                <input id="maybe" type="radio" value="undecided" name="group1">
+            </fieldset>
+            <fieldset id="group2">
+                <p>First place you want to go?</p>
+                <label>Hairdresser</label>
+                <input type="checkbox" id="hairdresser" value="hairdresser" name="group2">
+                <label for="pub">Pub</label>
+                <input type="checkbox" id="pub" value="pub" name="group2">
+                <label for='friend'>Friends place</label>
+                <input type="checkbox" id="friend" value="friends place" name="group2">
+            </fieldset>
+            <textarea placeholder="Let us know what has been the hardest thing for you?"></textarea>
             
             <button type="submit">Submit</button>
         </form>
