--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main id="main">
         <header>
-            <h1 id="title">The form of Forms</h1>
+            <h1 id="title">The Form of Forms</h1>
         </header>
         <p id="description">This is my form project for FreeCodeCamp. This from asks about your feelings towards Covid-19</p>
         <form id="survey-form">
@@ -33,21 +33,33 @@
             </label>
             <fieldset id="group1">
                 <p>Want to return to work?</p>
-                <label for="yes">Yes</label>
-                <input id="yes" type="radio" value="Yes" name="group1">
-                <label for="no">No</label>
-                <input id="no" type="radio" value="No" name="group1">
-                <label for="maybe">Undecided</label>
-                <input id="maybe" type="radio" value="undecided" name="group1">
+                <div class="questions">
+                    <label for="yes">Yes</label>
+                    <input id="yes" type="radio" value="Yes" name="group1">
+                </div>
+                <div class="questions">
+                    <label for="no">No</label>
+                    <input id="no" type="radio" value="No" name="group1">
+                </div>
+                <div class="questions">
+                    <label for="maybe">Undecided</label>
+                    <input id="maybe" type="radio" value="undecided" name="group1">
+                </div>
             </fieldset>
             <fieldset id="group2">
                 <p>First place you want to go?</p>
-                <label>Hairdresser</label>
-                <input type="checkbox" id="hairdresser" value="hairdresser" name="group2">
-                <label for="pub">Pub</label>
-                <input type="checkbox" id="pub" value="pub" name="group2">
-                <label for='friend'>Friends place</label>
-                <input type="checkbox" id="friend" value="friends place" name="group2">
+                <div class="questions">
+                    <label>Hairdresser</label>
+                    <input type="checkbox" id="hairdresser" value="hairdresser" name="group2">
+                </div>
+                <div class="questions">
+                    <label for="pub">Pub</label>
+                    <input type="checkbox" id="pub" value="pub" name="group2">
+                </div>
+                <div class="questions">
+                    <label for='friend'>Friends place</label>
+                    <input type="checkbox" id="friend" value="friends place" name="group2">
+                </div>
             </fieldset>
             <textarea placeholder="Let us know what has been the hardest thing for you?"></textarea>
             
